<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore_text"
        android:textSize="30sp"
        android:id="@+id/highscore_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore_points"
        android:textSize="30sp"
        android:id="@+id/highscore_points"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore_clicks"
        android:textSize="30sp"
        android:id="@+id/highscore_clicks"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore_level"
        android:textSize="30sp"
        android:id="@+id/highscore_level"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/highscore_time"
        android:textSize="30sp"
        android:id="@+id/highscore_time"/>

</LinearLayout>