<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_game_points"
        android:textSize="30sp"
        android:id="@+id/end_game_points"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_game_touches"
        android:textSize="30sp"
        android:id="@+id/end_game_clicks"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_game_level"
        android:textSize="30sp"
        android:id="@+id/end_game_level"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_game_time"
        android:textSize="30sp"
        android:id="@+id/end_game_time"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/end_game_restart"
        android:layout_marginTop="20dp"
        android:id="@+id/end_game_restart"
        android:onClick="restartGame"
        />

</LinearLayout>